[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Resources/LevelGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/ClipControl.gd" type="Script" id=3]
[ext_resource path="res://BlockSprites/MenuButton.png" type="Texture" id=4]

[node name="LevelMenu" type="MarginContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Level Select"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 984.0
margin_bottom = 470.0
size_flags_vertical = 2

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 350.0
size_flags_horizontal = 3
expand = true
stretch_mode = 5

[node name="ClipControl" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 882.0
margin_bottom = 350.0
rect_min_size = Vector2( 780, 350 )
rect_clip_content = true
script = ExtResource( 3 )

[node name="GridBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ClipControl"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LevelGrid" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox" instance=ExtResource( 2 )]
margin_right = 776.0
margin_bottom = 332.0

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 886.0
margin_right = 984.0
margin_bottom = 350.0
size_flags_horizontal = 3
expand = true
stretch_mode = 5

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 520.0
margin_right = 984.0
margin_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 40 )
icon = ExtResource( 4 )
expand_icon = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
